@@ -1,7 +1,10 @@
 20.jan (mi)
-      - support for 'upside down' tablatures (lowest string on top) (r. 3926)
+      - support for 'upside down' tablatures (lowest string on top) (r. 3929)
       - Score::putNote() (edit.cpp): do not accept a new note on a tablature
-        string already occupied (r. 3930)
+        string already occupied (r. 3931)
+      - Note::drag(): for tablatures, dragging up did not work: corrected.
+      - Note::endDrag(): for tablatures, modified to keep same pitch on new
+        string, if possible (also for 'upside down' tablatures) (r. 3935)
 19.jan (lv)
       - MusicXML import fixes: slurs and wedges
 18.jan (ws)
